--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./react-input-mask.d.ts"],
+    "typeRoots": ["./node_modules/@types", "src/react-input-mask.d.ts"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
